# 33routes

./: .gitignore  README.md
backend/: Makefile  docker-compose.yml
backend/auth-service/: Cargo.toml
backend/auth-service/src/: models.rs
backend/auth_service/: Cargo.toml  Dockerfile
backend/auth_service/src/: handlers.rs  main.rs
backend/database/postgres/init/: init.sql
backend/database/postgres/test_data/: seed_data.sql
backend/route-service/: Cargo.toml
backend/route_service/: Dockerfile
backend/user-service/: Cargo.toml  Dockerfile
backend/user-service/src/: main.rs  models.rs
backend/user_service/: Cargo.toml
backend/user_service/src/: handlers.rs  main.rs  models.rs
frontend/: index.html  package-lock.json
frontend/src/: App.js
frontend/src/components/Button/: Button.css  Button.js
frontend/src/components/Dropdown/: Dropdown.css  Dropdown.js
frontend/src/components/SearchBar/: SearchBar.js
frontend/src/components/Search_bar/: Search_bar.css  Search_bar.js
frontend/src/components/Toggle_switch/: Toggle_switch.css  Toggle_switch.js
