[package]
name = "route-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
bcrypt = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
