[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
uuid = "1.0"
hyper = { version = "0.14", features = ["full"] }
bcrypt = "0.12"
jsonwebtoken = "7.2"
dotenv = "0.15"
tokio-util = "0.7"
tower = "0.4"
